# tp_amq1_17co2024

./: .gitignore  Dockerfile  README.md  catboost.ipynb  generate_dataset.py  models.ipynb  pipeline_.py  pred_.py  pyproject.toml  util.py  visualizar_pipe.py
dataset_processed/: X_test_processed.csv
notebooks/: 1_dataset.ipynb  2_feature_engineering.ipynb  3_models.ipynb  3_models_final.ipynb  4_clustering.ipynb  cbarril.ipynb  cpisani.ipynb  feature_engineering.ipynb  feature_engineering_2.ipynb  ilarrumbide.ipynb  ilarrumbide2.ipynb  models.ipynb  neural_network.ipynb  svr_simple.ipynb  tree_regression.ipynb
notebooks/old/: catboost.ipynb  cbarril.ipynb  ilarrumbide.ipynb  neural_network.ipynb
notebooks/old/trees/: arbol_regresion.dot  arbol_regresion_alpha_2.dot
notebooks/old/wip/: svr_simple.ipynb  tree_regression.ipynb
notebooks/trees/: arbol_regresion_alpha.dot
notebooks/wip/: linear_regression.ipynb  models_wip_cb.ipynb  svr.ipynb
old/: catboost_model.cbm  visualizar_pipe.py
src/: main.py  util.py
src/models/: pipeline.py  pred_.py  used_car_quote_nn.py
