[tool.poetry]
name = "amq1"
version = "0.1.0"
description = ""
authors = ["Iñaki Larrumbide <ilarrumbide10@gmail.com>", "Claudio Barril <claudiobarril@gmail.com>", "Christian Pisani Testa <christian.tpg@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
pygame = "^2.5.2"
torch = "^2.5.0"
catboost = "^1.2.7"
xgboost = "^2.1.1"
optuna = "^4.0.0"
scikit-optimize = "^0.10.2"
hdbscan = "^0.8.39"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
